login registrarse salir

--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -16,7 +16,11 @@
           <h3><%= history.title %></h3>
           <small><%= time_ago_in_words(history.created_at) %> ago</small>
           <p><%= history.content.truncate(150)  %></p>
-          <p><%= link_to 'Show', history, class: "btn btn-primary" %> <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %> <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+          <% if history.user_id == current_user %>
+          <p><%= link_to 'Show', history, class: "btn btn-primary" %> <%= link_to 'Edit', edit_history_path(history), class: "btn btn-warning" %> <%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+          <% else %>
+          <%= link_to 'Show', history, class: "btn btn-primary" %>
+          <% end %>
         </div>
       </div>
     </div>
@@ -25,5 +29,3 @@
 
 
 <br>
-
-
