--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,17 +19,23 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <% if user_signed_in? %>
+            <% current_user.email %>
+            <% else %>
+            Acceso
+            <% end %>
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% if user_signed_in? %>
+            <li><a href="<%= edit_user_registration_path %>">Editar Regristo</a></li>
+            <li><a href="<%= destroy_user_session_path %>" data-method="delete">Salir</a></li>
+            <% else %>
+            <li><a href="<%= new_user_session_path %>">Login</a></li>
+            <li><a href="<%= new_user_registration_path %>">Registrarse</a></li>
+            <% end %>
           </ul>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
